--- a/handlers/dup.helper.in
+++ b/handlers/dup.helper.in
@@ -486,6 +486,16 @@ keepincroffulls = $dup_keepincroffulls
 # cfapikey = 
 # cfauthurl = 
 
+## Dropbox requires a valid authentication token. To obtain one, you will need
+## to create a Dropbox API application at https://www.dropbox.com/developers/apps/create.
+## See the "A note on Dropbox access" section of the Duplicity manpage for more
+## details: http://duplicity.nongnu.org/duplicity.1.html#sect12
+##
+## Default:
+# dropboxappkey =
+# dropboxappsecret =
+# dropboxaccesstoken =
+
 # FTP password, needed for backups using desturl = ftp://...
 #ftp_password = 
 
